docs/0.18.2/_sources/api/gammapy.modeling.models.ShellSpatialModel.rst.txt
ShellSpatialModel
=================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ShellSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ShellSpatialModel.covariance
      ~ShellSpatialModel.default_parameters
      ~ShellSpatialModel.evaluation_radius
      ~ShellSpatialModel.is_energy_dependent
      ~ShellSpatialModel.lat_0
      ~ShellSpatialModel.lon_0
      ~ShellSpatialModel.parameters
      ~ShellSpatialModel.phi_0
      ~ShellSpatialModel.position
      ~ShellSpatialModel.position_error
      ~ShellSpatialModel.radius
      ~ShellSpatialModel.tag
      ~ShellSpatialModel.type
      ~ShellSpatialModel.width

   .. rubric:: Methods Summary

   .. autosummary::

      ~ShellSpatialModel.__call__
      ~ShellSpatialModel.copy
      ~ShellSpatialModel.create
      ~ShellSpatialModel.evaluate
      ~ShellSpatialModel.evaluate_geom
      ~ShellSpatialModel.from_dict
      ~ShellSpatialModel.from_parameters
      ~ShellSpatialModel.integrate_geom
      ~ShellSpatialModel.plot
      ~ShellSpatialModel.plot_error
      ~ShellSpatialModel.plot_grid
      ~ShellSpatialModel.plot_interative
      ~ShellSpatialModel.to_dict
      ~ShellSpatialModel.to_region

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: evaluation_radius
   .. autoattribute:: is_energy_dependent
   .. autoattribute:: lat_0
   .. autoattribute:: lon_0
   .. autoattribute:: parameters
   .. autoattribute:: phi_0
   .. autoattribute:: position
   .. autoattribute:: position_error
   .. autoattribute:: radius
   .. autoattribute:: tag
   .. autoattribute:: type
   .. autoattribute:: width

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integrate_geom
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: plot_grid
   .. automethod:: plot_interative
   .. automethod:: to_dict
   .. automethod:: to_region
