docs/1.2rc1/_sources/api/gammapy.modeling.models.ShellSpatialModel.rst.txt
ShellSpatialModel
=================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ShellSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ShellSpatialModel.covariance
      ~ShellSpatialModel.default_parameters
      ~ShellSpatialModel.evaluation_bin_size_min
      ~ShellSpatialModel.evaluation_radius
      ~ShellSpatialModel.evaluation_region
      ~ShellSpatialModel.frozen
      ~ShellSpatialModel.is_energy_dependent
      ~ShellSpatialModel.lat_0
      ~ShellSpatialModel.lon_0
      ~ShellSpatialModel.parameters
      ~ShellSpatialModel.phi_0
      ~ShellSpatialModel.position
      ~ShellSpatialModel.position_error
      ~ShellSpatialModel.position_lonlat
      ~ShellSpatialModel.radius
      ~ShellSpatialModel.tag
      ~ShellSpatialModel.type
      ~ShellSpatialModel.width

   .. rubric:: Methods Summary

   .. autosummary::

      ~ShellSpatialModel.__call__
      ~ShellSpatialModel.copy
      ~ShellSpatialModel.evaluate
      ~ShellSpatialModel.evaluate_geom
      ~ShellSpatialModel.freeze
      ~ShellSpatialModel.from_dict
      ~ShellSpatialModel.from_parameters
      ~ShellSpatialModel.from_position
      ~ShellSpatialModel.integrate_geom
      ~ShellSpatialModel.plot
      ~ShellSpatialModel.plot_error
      ~ShellSpatialModel.plot_grid
      ~ShellSpatialModel.plot_interactive
      ~ShellSpatialModel.plot_position_error
      ~ShellSpatialModel.reassign
      ~ShellSpatialModel.to_dict
      ~ShellSpatialModel.to_region
      ~ShellSpatialModel.unfreeze

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: evaluation_bin_size_min
   .. autoattribute:: evaluation_radius
   .. autoattribute:: evaluation_region
   .. autoattribute:: frozen
   .. autoattribute:: is_energy_dependent
   .. autoattribute:: lat_0
   .. autoattribute:: lon_0
   .. autoattribute:: parameters
   .. autoattribute:: phi_0
   .. autoattribute:: position
   .. autoattribute:: position_error
   .. autoattribute:: position_lonlat
   .. autoattribute:: radius
   .. autoattribute:: tag
   .. autoattribute:: type
   .. autoattribute:: width

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: from_position
   .. automethod:: integrate_geom
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: plot_grid
   .. automethod:: plot_interactive
   .. automethod:: plot_position_error
   .. automethod:: reassign
   .. automethod:: to_dict
   .. automethod:: to_region
   .. automethod:: unfreeze
